[package]
name = "nimcp-brain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "NIMCP V2 — top-level brain integration"

[lints]
workspace = true

[features]
# Default is CPU-only. `cuda` propagates the GPU feature into nimcp-snn
# + nimcp-lnn so Backend::Gpu can light up LifGpu / CsrGpu / RstdpGpu /
# LtcGpu kernels.
default = []
cuda = ["nimcp-snn/cuda", "nimcp-lnn/cuda"]

[dependencies]
nimcp-core = { workspace = true }
nimcp-eventlog = { workspace = true }
nimcp-scheduler = { workspace = true }
nimcp-gpu = { workspace = true }
nimcp-adaptive = { workspace = true }
nimcp-snn = { workspace = true }
nimcp-lnn = { workspace = true }
nimcp-plasticity = { workspace = true }
nimcp-memory = { workspace = true }
nimcp-substrate = { workspace = true }
nimcp-thalamic = { workspace = true }
nimcp-checkpoint = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
ndarray = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3"
rand = { workspace = true }
rand_chacha = { workspace = true }
nimcp-plasticity = { workspace = true }
nimcp-quantum = { workspace = true }
nimcp-mathutils = { workspace = true }
