[package]
name = "nimcp-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "NIMCP V2 — V1-protocol-compatible Unix-socket daemon"
publish = false

[lints]
workspace = true

[[bin]]
name = "nimcp-daemon"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
# No default features on purpose — the daemon must build & test without
# any linkage to the V1 C shared library. A future `v1` feature will pull
# in `nimcp-v1-bridge` once that crate exists.
default = []
v1 = []

[dependencies]
nimcp-core = { workspace = true }
nimcp-scheduler = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "fs", "net", "io-util", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
eyre = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "fs", "net", "io-util", "signal", "test-util"] }
