[package]
name = "nimcp-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "NIMCP V2 — daemon hosting Brain behind a Unix-socket JSON-line protocol (Phase 7e+7f)"

[lints]
workspace = true

[dependencies]
nimcp-brain = { workspace = true }
nimcp-core = { workspace = true }
nimcp-adaptive = { workspace = true }
nimcp-snn = { workspace = true }
nimcp-lnn = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "fs", "net", "io-util", "signal", "process"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
ndarray = { workspace = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "nimcp-v2-daemon"
path = "src/main.rs"
