[package]
name = "nimcp-geometry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "NIMCP V2 — geometry utilities (Poincaré disk / hyperbolic distance, Lorentz)"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
