[package]
name = "nimcp-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "NIMCP V2 — Z-Ladder memory system (4-tier consolidation + landmarks)"

[lints]
workspace = true

[dependencies]
nimcp-core = { workspace = true }
nimcp-fractal = { workspace = true }
nimcp-geometry = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
