[package]
name = "nimcp-plasticity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "NIMCP V2 — plasticity rules (STDP, R-STDP, homeostatic)"

[lints]
workspace = true

[dependencies]
nimcp-core = { workspace = true }
ndarray = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
