[package]
name = "nimcp-plasticity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "NIMCP V2 — plasticity rules (STDP, R-STDP, homeostatic)"

[lints]
workspace = true

[dependencies]
# Pure plasticity math: no event log, no actors, no tensors. Params structs
# derive `Serialize`/`Deserialize` so they round-trip with checkpoints.
serde = { workspace = true }
