[package]
name = "nimcp-scheduler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "NIMCP V2 — tokio-based actor runtime with deterministic replay"

[lints]
workspace = true

[dependencies]
nimcp-core = { workspace = true }
# `test-util` is enabled in the library build, not just tests, because
# deterministic-replay mode (Scheduler::build_deterministic_runtime) uses
# tokio's paused-clock APIs (tokio::time::pause / advance / start_paused)
# that live behind that feature. Users who don't need deterministic mode
# still get a correct runtime — test-util only *adds* capabilities.
tokio = { workspace = true, features = ["test-util"] }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
