[package]
name = "nimcp-substrate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "NIMCP V2 — biological substrate (chemistry, glial, myelin) for multi-network modulation"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
