[package]
name = "nimcp-ternary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "NIMCP V2 — ternary (-1/0/+1) logic + packed storage"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
