[package]
name = "nimcp-thalamic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "NIMCP V2 — thalamic router (attention-gated signal routing, burst/tonic modes, Hebbian routes)"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
