[package]
name = "nimcp-v1-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "NIMCP V2 — FFI bridge to the V1 libnimcp C brain (compute reuse, V2 owns coordination)"
build = "build.rs"

[lints]
workspace = true

[features]
# Default includes CUDA. Disable with `--no-default-features` for CPU-only
# CI hosts without NVIDIA GPUs / without the V1 libnimcp.so built. In that
# mode build.rs emits nothing and src/lib.rs exposes stub types only.
default = ["cuda"]
cuda = ["dep:bindgen"]

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
# Only used when the `cuda` feature is enabled — bindgen walks the V1
# public header (include/nimcp.h) and emits `bindings.rs` into OUT_DIR.
bindgen = { version = "0.71", optional = true }
